fix arrow not showing

--- a/src/components/PokedexList/PokedexList.sass
+++ b/src/components/PokedexList/PokedexList.sass
@@ -17,12 +17,13 @@ $light: #FFE6E9
 .pokedex-cards
     overflow: scroll
     scroll-behavior: smooth
+    display: flex
+    flex-direction: column
 
 .pager
-    height: 5vh
-    flex: 1 1 0
+    height: 3em
+    width: 3em
     align-self: center
-    justify-self: center
     transition: background, height, color 0.1s ease-in
 
 .pager :hover
